<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:compat="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.sharang.pointofsale.MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="90"
        android:title="@string/search"
        compat:showAsAction="always" />

    <item
        android:id="@+id/action_reset"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="100"
        android:title="@string/reset"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_clear"
        android:orderInCategory="110"
        android:title="@string/clear_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="120"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
