<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_do_you_want_to_buy"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_name"
        android:hint="@string/name_of_item"
        android:inputType="textCapSentences"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_many_do_you_want_to_buy"
       />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_quantity"
        android:inputType="number"
        android:hint="quantity"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delivery_date"
        />

    <CalendarView
        android:id="@+id/calender_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:showWeekNumber="false">
    </CalendarView>

</LinearLayout>